deleted @about me@

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="menu">
             <ul id="menu-list">
-                <li><a id="link_aboutme">Обо мне</a></li>
+                <!-- <li><a id="link_aboutme">Обо мне</a></li> -->
                 <li><a id="link_project">Проекты</a></li>
                 <li><a id="link_contacts">Контакты</a></li>
                 <li class="theme-button" onclick="changeMode()"><a id="theme">Тема: <span class="theme-title">тёмная</span></a></li>
