--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         </div>
         <div id="menu">
             <ul id="menu-list">
-                <!-- <li><a id="link_aboutme">Обо мне</a></li> -->
                 <li><a id="link_project">Проекты</a></li>
                 <li><a id="link_contacts">Контакты</a></li>
                 <li class="theme-button" onclick="changeMode()"><a id="theme">Тема: <span class="theme-title">тёмная</span></a></li>
@@ -35,9 +34,9 @@
                 <h1>Здравствуйте!</h1>
                 <p>Меня зовут Бульбенков Александр Алексеевич, мне 16 лет, учусь в 10 классе МАОУ гимназии №22, живу в Калининграде. Увлекаюсь промышленным программированием,
                      предпринимательством, читаю книги. (Ссылка на GitHub находится в разделе <a id="link_contacts2"><u><b>Контакты</b></u></a>)</p>
-                <p>У меня уже был опыт бекенд-разработки на Node JS. 
-                    Во время обучения я использовал много гайдов и действовал методом "тыка" при использовании новых технологий, поэтому чувствую, что мне не хватает системных, 
-                    структурированных знаний. Надеюсь, что Лицей++ поможет с этим :)</p>
+                <p>Почему меня стоит взять в проект? Я успешно окончил Яндекс.Лицей и имею опыт промышленной разработки в разных сферах - это гарантирует,
+                     что я смогу освоить программу и успешно пройти курс. Через несколько лет я приду на стажировку в Яндекс -> принесу пользу компании. Профит. <br>
+                     Ладно, это звучит как-то дерзко, простите :)</p>
             </div>
             <img class="my-photo" src="src/me.jpg" alt='Фото автора'/>
         </section>
@@ -46,14 +45,14 @@
             <div class="project-list">
                 <a class="a-no-underline" target="_blank" href="https://vk.com/app7937913">
                     <div class="project">
-                        <img class="project-image" src="./src/gachi.png" />
+                        <img class="project-image" src="./src/gachi.png" alt="Гачи"/>
                         <h2>Гачи</h2>
                         <p class="project-description">Игра на платформе VK Mini Apps. <br/><b>Технологии:</b> React, Node JS, MongoDB, Express</p>
                     </div>
                 </a>
                 <a class="a-no-underline" target="_blank" href="https://vk.com/text_tools">
                     <div class="project">
-                        <img class="project-image" src="./src/texttools.jpg" />
+                        <img class="project-image" src="./src/texttools.jpg"  alt="TextTools"/>
                         <h2>TextTools</h2>
                         <p class="project-description">Приложение-инструмент на платформе VK Mini Apps для обратки текста. <br/><b>Технологии:</b> React</p>
                     </div>
